force-app/main/default/objects/TabPermissionBasedOnProfiles__c/TabPermissionBasedOnProfiles__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>TabPermissionBasedOnProfiles</label>
</CustomObject>