force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/Admission_Forms__c.field-meta.xml
<CustomField>
    <fullName>Admission_Forms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admission Forms</label>
    <type>Checkbox</type>
</CustomField>