force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/Billing_Summary__c.field-meta.xml
<CustomField>
    <fullName>Billing_Summary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Summary</label>
    <type>Checkbox</type>
</CustomField>