force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/Capture_Signature__c.field-meta.xml
<CustomField>
    <fullName>Capture_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Capture Signature</label>
    <type>Checkbox</type>
</CustomField>