force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/Care_Episode__c.field-meta.xml
<CustomField>
    <fullName>Care_Episode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Care Episode</label>
    <type>Checkbox</type>
</CustomField>