force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/Care_Plan__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Care Plan</label>
    <type>Checkbox</type>
</CustomField>