force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/CHC_Prescription_Order__c.field-meta.xml
<CustomField>
    <fullName>CHC_Prescription_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CHC Prescription Order</label>
    <type>Checkbox</type>
</CustomField>