force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/Claims__c.field-meta.xml
<CustomField>
    <fullName>Claims__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claims</label>
    <type>Checkbox</type>
</CustomField>