force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/Clinical_Forms__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Forms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clinical Forms</label>
    <type>Checkbox</type>
</CustomField>