force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/CostOfCare__c.field-meta.xml
<CustomField>
    <fullName>CostOfCare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CostOfCare</label>
    <type>Checkbox</type>
</CustomField>