force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/Discharge_Form__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discharge Form</label>
    <type>Checkbox</type>
</CustomField>