force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/First_Visit_Notes__c.field-meta.xml
<CustomField>
    <fullName>First_Visit_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Visit Notes</label>
    <type>Checkbox</type>
</CustomField>