force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/Generate_Verification_Code__c.field-meta.xml
<CustomField>
    <fullName>Generate_Verification_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Verification Code</label>
    <type>Checkbox</type>
</CustomField>