force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/Immunization__c.field-meta.xml
<CustomField>
    <fullName>Immunization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Immunization</label>
    <type>Checkbox</type>
</CustomField>