force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/Integrated_Lab_Order__c.field-meta.xml
<CustomField>
    <fullName>Integrated_Lab_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integrated Lab Order</label>
    <type>Checkbox</type>
</CustomField>