force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/Lab_Orders__c.field-meta.xml
<CustomField>
    <fullName>Lab_Orders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lab Orders</label>
    <type>Checkbox</type>
</CustomField>