force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/LabOrder_Priority__c.field-meta.xml
<CustomField>
    <fullName>LabOrder_Priority__c</fullName>
    <inlineHelpText>LabOrder Priority:
1. CHC LabOrder
2. Dummy LabOrder

Note: Please add text same as mentioned here.</inlineHelpText>
    <label>LabOrder Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>