force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/Master_Problem_List__c.field-meta.xml
<CustomField>
    <fullName>Master_Problem_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Master Problem List</label>
    <type>Checkbox</type>
</CustomField>