force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/Medical_Examination__c.field-meta.xml
<CustomField>
    <fullName>Medical_Examination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical Examination</label>
    <type>Checkbox</type>
</CustomField>