force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/MedicalCoding__c.field-meta.xml
<CustomField>
    <fullName>MedicalCoding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MedicalCoding</label>
    <type>Checkbox</type>
</CustomField>