force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/Messaging__c.field-meta.xml
<CustomField>
    <fullName>Messaging__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Messaging</label>
    <type>Checkbox</type>
</CustomField>