force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/MOR_MAR__c.field-meta.xml
<CustomField>
    <fullName>MOR_MAR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MOR/MAR</label>
    <type>Checkbox</type>
</CustomField>