force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/NewCrop_Prescription_Order__c.field-meta.xml
<CustomField>
    <fullName>NewCrop_Prescription_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NewCrop Prescription Order</label>
    <type>Checkbox</type>
</CustomField>