force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/Notes_Forms__c.field-meta.xml
<CustomField>
    <fullName>Notes_Forms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notes Forms</label>
    <type>Checkbox</type>
</CustomField>