force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/Nursing_Forms__c.field-meta.xml
<CustomField>
    <fullName>Nursing_Forms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nursing Forms</label>
    <type>Checkbox</type>
</CustomField>