force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/PatientStatement__c.field-meta.xml
<CustomField>
    <fullName>PatientStatement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PatientStatement</label>
    <type>Checkbox</type>
</CustomField>