force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment</label>
    <type>Checkbox</type>
</CustomField>