force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/PaymentSchedule__c.field-meta.xml
<CustomField>
    <fullName>PaymentSchedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PaymentSchedule</label>
    <type>Checkbox</type>
</CustomField>