force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/Prescription_Priority__c.field-meta.xml
<CustomField>
    <fullName>Prescription_Priority__c</fullName>
    <inlineHelpText>Prescription Priority:
1. NewCrop Prescription
2. Dummy Prescription

Note: Please add text same as mentioned here.</inlineHelpText>
    <label>Prescription Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>