force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/Problems__c.field-meta.xml
<CustomField>
    <fullName>Problems__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Problems</label>
    <type>Checkbox</type>
</CustomField>