force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/Procedure__c.field-meta.xml
<CustomField>
    <fullName>Procedure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Procedure</label>
    <type>Checkbox</type>
</CustomField>