force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/Progress_Notes__c.field-meta.xml
<CustomField>
    <fullName>Progress_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Progress Notes</label>
    <type>Checkbox</type>
</CustomField>