force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/Review_Forms__c.field-meta.xml
<CustomField>
    <fullName>Review_Forms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Review Forms</label>
    <type>Checkbox</type>
</CustomField>