force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/Send_Data_For_Claims__c.field-meta.xml
<CustomField>
    <fullName>Send_Data_For_Claims__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Data For Claims</label>
    <type>Checkbox</type>
</CustomField>