force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/Timeline__c.field-meta.xml
<CustomField>
    <fullName>Timeline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Timeline</label>
    <type>Checkbox</type>
</CustomField>