force-app/main/default/objects/TabPermissionBasedOnProfiles__c/fields/Transportation__c.field-meta.xml
<CustomField>
    <fullName>Transportation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transportation</label>
    <type>Checkbox</type>
</CustomField>